// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverviewTabContent renders with an empty state 1`] = `

<section
  class="h-full w-full flex flex-col"
  style="opacity: 0; filter: blur(2px);"
>
  <div style="opacity: 0; filter: blur(2px);">
    <gui-selected-item-empty-state
      icon="gui-file-text-icon"
      title="No Overview"
      description="We couldn't locate the metadata to display an overview for this project"
    >
    </gui-selected-item-empty-state>
  </div>
</section>

`;

exports[`OverviewTabContent renders with content 1`] = `

<section
  class="h-full w-full flex flex-col"
  style="opacity: 0; filter: blur(2px);"
>
  <div style="opacity: 0; filter: blur(2px);">
    <div class="prose-sm prose-neutral prose-li:list-disc w-full max-w-none p-6">
      <gui-markdown>
        ## Description

This is a custom description
      </gui-markdown>
    </div>
  </div>
</section>

`;
